<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tugas4MainActivity">
  <TextView
      android:id="@+id/tugas4TextView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/assign4"
      android:textSize="@dimen/header1_size"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.045" />

  <TextView
      android:id="@+id/tugas4Name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/assign4_name"
      android:textSize="@dimen/header2_size"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.505"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.136" />
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tugas4Name">

    <TextView
        android:id="@+id/textViewNRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@id/editTextNRP"
        android:layout_toStartOf="@+id/editTextNRP"

        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nrp"/>

    <EditText
        android:id="@+id/editTextNRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/editTextNRP"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@id/editTextName"
        android:layout_toStartOf="@+id/editTextName"

        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/editTextNRP"
        android:layout_alignParentEnd="true"

        android:inputType="textPersonName"
        android:ems="10" />

    <LinearLayout
        android:id="@+id/buttonDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/textViewName"

        android:orientation="horizontal">
      <Button
          android:id="@+id/buttonSave"
          android:layout_width="0dp"
          android:layout_height="wrap_content"

          android:layout_weight="1"
          android:layout_margin="4dp"

          android:text="@string/save">
      </Button>
      <Button
          android:id="@+id/buttonGetAllData"
          android:layout_width="0dp"
          android:layout_height="wrap_content"

          android:layout_weight="1"
          android:layout_margin="2dp"

          android:text="@string/get_data">
      </Button>
      <Button
          android:id="@+id/buttonUpdate"
          android:layout_width="2dp"
          android:layout_height="wrap_content"

          android:layout_weight="1"
          android:layout_margin="2dp"

          android:text="@string/update">
      </Button>
      <Button
          android:id="@+id/buttonDelete"
          android:layout_width="0dp"
          android:layout_height="wrap_content"

          android:layout_weight="1"
          android:layout_margin="2dp"

          android:text="@string/delete">
      </Button>
    </LinearLayout>
  </RelativeLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>