<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tugas5MainActivity">
    <TextView
        android:id="@+id/tugas5TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assign5"
        android:textSize="@dimen/header1_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/tugas5Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assign5_name"
        android:textSize="@dimen/header2_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tugas5Name"

        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/buttonShowInputDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/show_input_dialog" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=" "
            android:textSize="@dimen/header2_size"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>